--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flores Amarillas</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="flores.png" type="image/png">
 </head>
 <body>
   <div class="night"></div>
@@ -304,6 +305,7 @@
       </div>
     </div>
   </div>
+  
   <audio id="musica" loop style="display:none">
   <source src="Flores Amarillas.mp3" type="audio/mpeg">
   </audio>
